--- a/index.html
+++ b/index.html
@@ -1,27 +1,93 @@
-<html><head>
-
-<title>Afan</title>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-<script src="http://code.jquery.com/ui/1.8.20/jquery-ui.min.js" type="text/javascript"></script>
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Latihan Membuat Form</title>
 </head>
-<body style="min-height:100%;overflow-y:scroll;font-family: Helvetica, Open Sans, Arial;color:#333333;">
-
-<div id="informasi" style="padding: 10px; border-radius: 10px; width: 400px; position: fixed; z-index: 9999; top: 7%; left: 5%; font-size: 12px; font-weight: 600; box-shadow: rgb(0, 0, 0) 0px 0px 5px; background-color: rgba(140, 227, 147, 0.85);">
-	<h2>Artikel Spinner <span style="float:right;font-size:12px">Developed by Xcomel Team</span></h2>
-	<hr style="border-top:1px solid #444">
-	<div style="margin-top:10px" id="divsatu">Kata Target<textarea placeholder="Kumpulan Artikel" id="target" onmouseover="igniel.balon.uid()" onmouseout="igniel.balon.out()" style="width: 327px; height: 120px; margin-left: 7px; padding: 3px; border: 1px solid rgb(170, 170, 170); border-radius: 4px; resize: none; overflow-y: auto; vertical-align: top; font-weight: normal; font-size: 12px; transition: all 0.5s ease 0s;"></textarea>
-	</div>
-	<div style="margin-top:10px;height:12px;" id="divdua">#Tebuwung #Xcomel </div>
-	<div style="margin-top:10px" id="laporan"></div>
-	<div style="margin-top:10px;display:block" id="divtiga">
-		<button style="background:#F6F7F9;color:#4B4F56;padding:2px 6px;border: 1px solid #ced0d4;cursor:pointer;display:inline-block;font-size:12px;border-radius:2px;-webkit-font-smoothing:antialiased;font-weight:bold;line-height:18px;text-align:center;text-decoration:none;text-shadow:none;vertical-align:top;white-space:nowrap" onclick="igniel.bersih()">Clear All</button>
-		<div style="display:inline-block;float:right"> <button onclick="igniel.berhenti()" id="stop" style="background:#cc0000;color:#fff;padding:5px 10px;margin-left:0px;border:1px solid #ced0d4;cursor:pointer;font-size:12px;border-radius:2px;-webkit-font-smoothing:antialiased;font-weight:bold;line-height:18px;text-align:center;text-decoration:none;text-shadow:none;vertical-align:top;white-space:nowrap">CLEAR</button> <button onclick="igniel.bjita()" id="start" style="background:#4267B2;color:#fff;padding:5px 10px;margin-left:0px;border:1px solid #ced0d4;cursor:pointer;display:inline-block;font-size:12px;border-radius:2px;-webkit-font-smoothing:antialiased;font-weight:bold;line-height:18px;text-align:center;text-decoration:none;text-shadow:none;vertical-align:top;white-space:nowrap">START</button></div>
-	</div>
-	<div style="text-align:center;"><br><textarea id="laporanFull" style="resize:none;background:#f4ff81;font-weight:normal;width:400px;height:120px;padding:7px 10px;border:1px solid #777;border-radius: 4px;font-size:12px;transition:all 0.5s ease"></textarea></div>
-	<div style="text-align:center;color:#4B4F56"><span id="reason"></span></div>
-	<div id="balondelay"></div>
-	<div id="confirm"></div>
-</div>
-
-</body></html>
+<body>
+ 
+<!--Membuat Form-->
+<h1>Formulir Mahasiswa</h1>	
+<form>
+	<table>
+		<tr>
+			<td>Nama</td>
+			<td>:</td>
+			<td><input type="text" name="nama" placeholder="Nama"></td>
+		</tr>
+		<tr>
+			<td>NPM</td>
+			<td>:</td>
+			<td><input type="text" name="npm" placeholder="NPM"></td>
+		</tr>
+		<tr>
+			<td>Kelas</td>
+			<td>:</td>
+			<td><input type="text" name="kelas" placeholder="Kelas"></td>
+		</tr>
+		<tr>
+			<td>Jenis Kelamin</td>
+			<td>:</td>
+			<td>
+			<input type="radio" name="j_kel" value="Male">Male
+			<input type="radio" name="j_kel" value="Female">Female
+			</td>
+		</tr>
+		<tr>
+			<td>Tanggal Lahir</td>
+			<td>:</td>
+			<td>
+				<input type="date" name="tgl_lahir">
+			</td>
+		</tr>
+		<tr>
+		<tr>
+			<td>Alamat</td>
+			<td>:</td>
+			<td>
+				<textarea name="alamat" placeholder="Alamat"></textarea>
+			</td>
+		</tr>
+		<tr>
+			<td>Hobi</td>
+			<td>:</td>
+			<td>
+				<input type="checkbox" name="hobi" value="Main Game">Main Game
+				<input type="checkbox" name="hobi" value="Belajar">Belajar
+				<input type="checkbox" name="hobi" value="Menonton Film">Menonton Film
+			</td>
+		</tr>
+			<td>Jurusan</td>
+			<td>:</td>
+			<td>
+				<select name="jurusan">
+					<option>--Pilih--
+					<option>Sistem Informasi
+					<option>Teknik Informatika
+					<option>Teknik Inustri
+					<option>Psikologi
+				</select>
+			</td>
+		</tr>
+		<tr>
+			<td>Fakultas</td>
+			<td>:</td>
+			<td>
+				<select name="fakultas">
+					<option>--Pilih--
+					<option>Teknologi Industri
+					<option>Ilmu Komputer
+					<option>Psikologi
+					<option>Ekonomi
+				</select>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<input type="submit" value="Submit">
+				<input type="reset" value="Reset">
+			</td>
+		</tr>
+	</table>
+</form>
+</body>
+</html>
